fix: :bug: cambio de variable de entorno